# son

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  setup.py
examples/: illustration.py
license/: index.html
search/: search_index.json
son/: __about__.py  __init__.py  misc.py  progressbar.py
tests/: .gitignore  test_son.py
