[tool.poetry]
name = "son"
version = "0.2.3"
description = "Tools to read and write .son files"
authors = ["Florian Knoop"]
license = "ISC"
readme = "README.md"
repository = "https://github.com/flokno/son"
keywords = ["file format", "data"]

[tool.poetry.dependencies]
python = ">=3.5"
progress = {version = "^1.5",optional = true}

[tool.poetry.extras]
progress = ["progress"]

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
